force-app/main/default/objects/collab_Collaboration_Event__e/collab_Collaboration_Event__e.object-meta.xml
<CustomObject>
    <description>Real-time collaboration events for canvas synchronization. Handles object operations (add, move, delete), drawing strokes, and user presence (join/leave).</description>
    <label>Collaboration Event</label>
    <pluralLabel>Collaboration Events</pluralLabel>
</CustomObject>