force-app/main/default/objects/collab_Collaboration_Event__e/fields/collab_Canvas_Id__c.field-meta.xml
<CustomField>
    <fullName>collab_Canvas_Id__c</fullName>
    <description>Unique identifier for the canvas this event belongs to</description>
    <label>Canvas Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>