force-app/main/default/objects/collab_Collaboration_Event__e/fields/collab_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>collab_Event_Type__c</fullName>
    <description>Type of collaboration event: object_add, object_move, object_delete, draw_stroke, user_join, user_leave</description>
    <label>Event Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>