force-app/main/default/objects/collab_Collaboration_Event__e/fields/collab_Payload__c.field-meta.xml
<CustomField>
    <fullName>collab_Payload__c</fullName>
    <description>JSON payload containing event-specific data (object properties, coordinates, etc.)</description>
    <label>Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>