force-app/main/default/objects/collab_Collaboration_Event__e/fields/collab_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>collab_Timestamp__c</fullName>
    <description>Server timestamp when the event was published</description>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>