force-app/main/default/objects/collab_Collaboration_Event__e/fields/collab_User_Color__c.field-meta.xml
<CustomField>
    <fullName>collab_User_Color__c</fullName>
    <description>Hex color code assigned to this user for cursor and object highlighting</description>
    <label>User Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>