force-app/main/default/objects/collab_Collaboration_Event__e/fields/collab_User_Id__c.field-meta.xml
<CustomField>
    <fullName>collab_User_Id__c</fullName>
    <description>Salesforce User ID of the user who triggered this event</description>
    <label>User Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>