force-app/main/default/objects/collab_Collaboration_Event__e/fields/collab_User_Name__c.field-meta.xml
<CustomField>
    <fullName>collab_User_Name__c</fullName>
    <description>Display name of the user for UI rendering</description>
    <label>User Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>